[metadata]
name = irolling
version = v0.0.1
summary = irolling for analyzing stock index future contracts
author = wsfdl
author_email = vanderliang@gmail.com
home_page = https://github.com/DeliangFan
classifier =
    Environment :: Irolling
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.0

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages =
    irolling

[entry_points]
console_scripts =
    irolling = irolling.cmd.irollingclient:main
